# tsh-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  Makefile  README.md  RELEASE_GUIDE.md  TESTING.md  demo.md  deny.toml
.cargo/: config.toml
.claude/: settings.local.json
.github/: SECURITY.md  dependency-review-config.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  dependency-review.yml  release.yml  security.yml  test-detailed.yml  test.yml
src/: c2_https.rs  client.rs  constants.rs  error.rs  helpers.rs  lib.rs  main.rs  noise.rs  pel.rs  persistence.rs  pty.rs  server.rs  socks5.rs  sysinfo.rs  terminal.rs
src/tests/: c2_https_tests.rs  client_tests.rs  error_tests.rs  integration_tests.rs  jitter_tests.rs  mod.rs  noise_tests.rs  persistence_tests.rs  protocol_tests.rs  pty_tests.rs  server_handler_tests.rs  server_tests.rs  socks5_tests.rs  sysinfo_tests.rs  terminal_tests.rs
