[package]
name = "tsh-rs"
version = "1.0.0"
edition = "2021"
authors = ["Zac"]
description = "Tiny Shell - Secure remote shell access tool with Noise Protocol encryption"
license = "MIT"

[[bin]]
name = "tsh"
path = "src/bin/tsh.rs"

[[bin]]
name = "tshd"
path = "src/bin/tshd.rs"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "2.0"
log = "0.4"
env_logger = "0.10"
rand = "0.8"
sha1 = "0.10"
sha2 = "0.10"
hmac = "0.12"
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
snow = "0.9"
base64 = "0.22"
indicatif = "0.17"
crossterm = "0.27"
portable-pty = "0.8"

[target.'cfg(unix)'.dependencies]
nix = "0.27"
libc = "0.2"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winuser", "consoleapi", "processthreadsapi"] }

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
